<resources>
    <string name="app_name">Latin American Bank</string>
    <string name="signupActivity">Signup</string>
    <string name="newPayActivity">New Pay</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Balance Constants-->
    <string name="balance_checking">Checking</string>
    <string name="balance_savings">Savings</string>
    <string name="balance_credit">Credit</string>
    <string name="balance_currency">$</string>
    <string name="balance_checking_value">700</string>
    <string name="balance_savings_value">30</string>
    <string name="balance_credit_value">0</string>
    <string name="balance_detail"><u>Details</u></string>


</resources>
